<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".StudentActivity">

    <EditText
        android:id="@+id/student_name_input"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/insert_name_label"
        tools:layout_editor_absoluteX="69dp"
        tools:layout_editor_absoluteY="93dp"
        tools:text="@string/insert_name_label" />

    <EditText
        android:id="@+id/student_id_input"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/insert_student_id_label"
        tools:layout_editor_absoluteX="69dp"
        tools:layout_editor_absoluteY="153dp" />

    <TextView
        android:id="@+id/student_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:layout_editor_absoluteX="119dp"
        tools:layout_editor_absoluteY="46dp"
        tools:text="@string/add_student_title" />

    <Button
        android:id="@+id/student_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register_button"
        tools:layout_editor_absoluteX="132dp"
        tools:layout_editor_absoluteY="266dp"
        tools:text="@string/register_button" />

</android.support.constraint.ConstraintLayout>