<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/count_externals"
        android:layout_width="43dp"
        android:layout_height="50dp"
        android:textAllCaps="false"
        android:textColor="@color/colorAccent"
        android:textSize="36sp"
        android:visibility="visible"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.307"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.372"
        tools:text="99" />

    <TextView
        android:id="@+id/lbl_externals"
        android:layout_width="100dp"
        android:layout_height="49dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="208dp"
        android:gravity="center"
        android:lineSpacingExtra="0sp"
        android:text="@string/externals_counter_label"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.052"
        app:layout_constraintStart_toEndOf="@+id/count_students"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/count_servers"
        android:layout_width="43dp"
        android:layout_height="50dp"
        android:textAllCaps="false"
        android:textColor="@color/colorAccent"
        android:textSize="36sp"
        android:visibility="visible"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.307"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.236"
        tools:text="99" />

    <TextView
        android:id="@+id/lbl_servers"
        android:layout_width="115dp"
        android:layout_height="49dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="132dp"
        android:gravity="center"
        android:lineSpacingExtra="0sp"
        android:text="@string/servers_counter_label"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.032"
        app:layout_constraintStart_toEndOf="@+id/count_students"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@string/servers_counter_label" />

    <TextView
        android:id="@+id/count_students"
        android:layout_width="43dp"
        android:layout_height="50dp"
        android:textAllCaps="false"
        android:textColor="@color/colorAccent"
        android:gravity="center"
        android:textSize="36sp"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.306"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.107"
        tools:text="99" />

    <TextView
        android:id="@+id/lbl_students"
        android:layout_width="80dp"
        android:layout_height="49dp"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="60dp"
        android:gravity="center"
        android:lineSpacingExtra="0sp"
        android:text="@string/students_counter_label"
        android:textSize="24sp"
        app:layout_constraintStart_toEndOf="@+id/count_students"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@string/students_counter_label" />

    <Button
        android:id="@+id/add_student_btn"
        style="@style/Widget.AppCompat.Button.Small"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:text="@string/add_student_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:text="@string/add_student_button" />

    <Button
        android:id="@+id/add_server_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginLeft="24dp"
        android:layout_marginStart="24dp"
        android:text="@string/add_server_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/add_student_btn" />

    <Button
        android:id="@+id/add_external_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:text="@string/add_external_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</android.support.constraint.ConstraintLayout>